Fix WebMediaStrategy::createMediaRecorderPrivateWriter rdar://141743318 https://bugs.webkit.org/show_bug.cgi?id=284943

Reviewed by Eric Carlson and Jean-Yves Avenard.

Return the newly created remote writer so that recording actually happens in GPU process.

* Source/WebKit/WebProcess/GPU/media/WebMediaStrategy.cpp:
(WebKit::WebMediaStrategy::createMediaRecorderPrivateWriter const):

Canonical link: https://commits.webkit.org/288091@main